Jobs are not filtered by selected activity in the Process instance detail view #299